Last update fix: row misalignment

--- a/src/index.css
+++ b/src/index.css
@@ -12,16 +12,12 @@ body {
 }
 
 .App {
-  display: grid;
+  display: flex;
   justify-content: center;
   align-items: center;
   background-image: linear-gradient(135deg, #79f1a4 10%, #0e5cad 100%);
   height: 100vh;
   width: 100%;
-}
-
-.container {
-  margin-bottom: 30px;
 }
 
 #button {
@@ -51,5 +47,6 @@ body {
 input[type="text"]
 {
     font-size:17px;
+    max-width: 229px;
 }
 
